# CA

./: Cargo.toml
assets/buildings/: allied_barracks.glb  allied_construction_yard.glb  allied_power_plant.glb
assets/definitions/buildings/: barracks.json  construction_yard.json  power_plant.json  refinery.json  soviet_barracks.json  soviet_construction_yard.json  soviet_refinery.json  soviet_war_factory.json  tesla_reactor.json  war_factory.json
assets/definitions/factions/: alliance.json  soviet.json
assets/definitions/resources/: ore.json
assets/definitions/terrain/: dirt.json  grass.json  road.json  rock.json  sand.json  water.json
assets/definitions/units/: chrono_miner.json  conscript.json  gi.json  grizzly_tank.json  rhino_tank.json  war_miner.json
assets/maps/: desert_dunes.ron  green_plains.ron  skirmish_50.ron
assets/resources/: gold.glb
assets/units/: grizzly_tank.glb  rhino_tank.glb
doc/: Armor&Weapons.md
future_models/Editables/ProgrammerArt/: allied_barracks.blend  resources.blend  tanks.blend
src/: main.rs
src/game/: mod.rs  player.rs  save_load.rs  spatial_hash.rs
src/game/ai/: mod.rs
src/game/buildings/: mod.rs
src/game/camera/: mod.rs
src/game/combat/: mod.rs
src/game/commands/: mod.rs
src/game/data/: mod.rs
src/game/economy/: mod.rs
src/game/fog_of_war/: mod.rs
src/game/game_state/: mod.rs
src/game/map/: map_asset.rs  map_chunk.rs  map_loader.rs  map_registry.rs  map_spawner.rs  mod.rs  terrain.rs
src/game/orders/: mod.rs
src/game/pathfinding/: mod.rs
src/game/selection/: mod.rs
src/game/ui/: console.rs  (+4 more)
(+2 files in other folders)
