[package]
name = "crimson_alert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["jpeg","debug"] }
bevy_fog_of_war = "0.3.0"
rand = "0.10.1"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
